[tool.poetry]
name = "dash"
version = "0.1.0"
description = ""
authors = ["dsanchezsantos <dsanchezsantos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.0"
supabase = "^2.13.0"
plotly = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
